New button to generate new verions of thumbnails

--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -74,6 +74,7 @@
 </p>
 
 <ul class="menu float_right">
+	<li>{input thumbnail class => buttonLike}</li>
 	<li>{input turnLeft class => buttonLike}</li>
 	<li>{input turnRight class => buttonLike}</li>
 </ul>
