Add hint to open photo edit album page

--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -84,6 +84,8 @@
 
 <p>Výběr fotografie provedete kliknutím na ní, nemusíte klikat přímo na zaškrtávací políčko.</p>
 
+<p>Jestliže chcete fotografii otevřít a ne označit, klikněte na fotku současně s držením <b>Crtl</b></p>
+
 <p>Pokud chcete rychle označit všechny fotografie, použijte klávesovou zkratku <b>Crtl+A</b></p>
 
 <p>Jestliže mají některé Vaše fotografie ikonku <img src="{$baseUrl}/img/eye-close.svg" style="height: 1em"> nebo v menu alba vidíte položku <b>změnit viditelnost</b>
