--- a/app/MemberModule/templates/Akce.feedback.latte
+++ b/app/MemberModule/templates/Akce.feedback.latte
@@ -29,7 +29,7 @@ table#items .forum_post { max-width: 45em; padding-left: 1ex }
 
 <table id="items">
 {foreach $ratings as $item}
-    <tr n:class="top,borderLike,$item->date_add > $user->getIdentity()->date_last ? 'new', $item->user_id == $user->getId() ? logged"
+    <tr n:class="top,borderLike,$item->date_add > $user->identity->date_last ? 'new', $item->user_id == $user->id ? logged"
         id="p{$iterator->getCounter()}">
     <td>
     <a href="#p{$iterator->getCounter()}" title="{$item->date_add|timeAgoInWords}" class="noLink">
