Add two new columns to user table: vzsId and cardId

--- a/app/MemberModule/components/UserGridControlColumns.latte
+++ b/app/MemberModule/components/UserGridControlColumns.latte
@@ -21,11 +21,11 @@
 {/define}
 
 {define cell-telefon}
-	{$cell|phone}
+	{if $cell}{$cell|phone}{/if}
 {/define}
 
 {define cell-telefon2}
-	{$cell|phone}
+	{if $cell}{$cell|phone}{/if}
 {/define}
 
 {define cell-age}
