--- a/www/subdom/member/css/member.mobile.css
+++ b/www/subdom/member/css/member.mobile.css
@@ -1,11 +1,15 @@
-  #menu {float: none;  line-height: 2.5em; margin-top: 1em}
-  #menu li a {display: inline-block; line-height: 1.2em; margin-right: 1ex; width: auto;}
-  #menu li {display: inline-block; line-height: 1.2em; width: auto; margin-top: 1ex;}
-  #text {margin-left: 0;}
-  #text h1 {top: 0; left: 1ex;}
-  #top img {display: none;}
-  #top #profile {display: none;}
-  #top h1 {display: block; vertical-align: baseline;}
-  #top #top-right {top: -1.25em;}
+#menu {float: none; line-height: 2.5em; margin-top: 1em}
+#menu li a {display: inline-block; line-height: 1.2em; width: auto; text-align: center}
+#menu li {display: inline-block; line-height: 1.2em; width: auto; margin-top: 1ex;
+  padding: 0.3ex 1ex}
+#menu li a .icon {font-size: 120%}
+#menu li a span {display: none}
 
-  table#items .post {display: none}
+#text {margin-left: 0;}
+#text h1 {top: 0; left: 1ex;}
+#top img {display: none;}
+#top #profile {display: none;}
+#top h1 {display: block; vertical-align: baseline;}
+#top #top-right {top: -1.25em;}
+
+table#items .post {display: none}
