Make horizontal photo list scrollable on mobile devices

--- a/app/PhotoModule/templates/Album.view.latte
+++ b/app/PhotoModule/templates/Album.view.latte
@@ -4,7 +4,8 @@
 	<style type="text/css" n:syntax="off">
 		#photoBottom { clear: both; padding-top: 1em; }
 		.popis span.member { font-size: 1.1em; }
-		.photoList li { position: relative; }
+		ul.photoList li { position: relative; }
+		ul.photoList { overflow: hidden; }
 		.icon { vertical-align: bottom; }
 	</style>
 
