--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -2,10 +2,11 @@
 <link rel="stylesheet" href="{$baseUrl}/css/jquery-ui.min.css" type="text/css" media="screen">
 
 <style type="text/css" n:syntax="off">
-	.photoList li { width: 150px; height: 100px; font-size: 1em; text-align: center; position: relative; cursor: move;}
-	.photoList li img:hover, .photoList li:hover img { border-color: #ea9419;}
-	.photoList li input.title { width: 98%; position: absolute; bottom: 0; right: 0; font-size: 0.8em; background-color: rgba(0,0,0,0.5); z-index: 2; text-align: right;}
-	.photoList li input.selected { position: absolute; top: 0; left: 0; z-index: 2;}
+	ul.photoList { overflow: hidden; }
+	ul.photoList li { width: 150px; height: 100px; font-size: 1em; text-align: center; position: relative; cursor: move;}
+	ul.photoList li img:hover, .photoList li:hover img { border-color: #ea9419;}
+	ul.photoList li input.title { width: 98%; position: absolute; bottom: 0; right: 0; font-size: 0.8em; background-color: rgba(0,0,0,0.5); z-index: 2; text-align: right;}
+	ul.photoList li input.selected { position: absolute; top: 0; left: 0; z-index: 2;}
 	#frm-superForm label { font-weight: bold;}
 	.album-name { font-size: 1.5em; font-weight: bold;}
 	input.album-slug { border-color: transparent;}
