Remove most of localhost improvization and some changes due to new dir structure

--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -12,8 +12,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale=1, width=device-width">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="shortcut icon" href="{$baseUrl}/img/favicon.ico" type="image/x-icon">
-	<link rel="icon" sizes="any" href="{$baseUrl}/img/favicon.svg" type="image/svg+xml">
+	<link rel="shortcut icon" href="{$baseUrl}/img/vzs.ico" type="image/x-icon">
+	<link rel="icon" sizes="any" href="{$baseUrl}/img/vzs.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="{$baseUrl}/css/photo.css" type="text/css">
 
 	<link rel="stylesheet" href="{$baseUrl}/css/photo.mobile.css" type="text/css" media="screen and (max-width: 750px)">
@@ -40,8 +40,8 @@
 
 	<div id="header">
 		<a n:href="News:" title="Vzs Jablonec Fotogalerie">
-			<img src="{$baseUrl}/img/vzs.svg" alt="VZS ČČK" width="80" height="80">
-			<img src="{$baseUrl}/img/zralok.svg" alt="VZS JBC" width="80" height="80">
+			<img src="{$baseUrl}/img/vzs-alt.svg" alt="VZS ČČK" width="80" height="80">
+			<img src="{$baseUrl}/img/zralok-alt.svg" alt="VZS JBC" width="80" height="80">
 		</a>
 		<h1><span></span>VZS Jablonec Fotogalerie</h1>
 	</div>
