--- a/app/AccountModule/templates/@layout.latte
+++ b/app/AccountModule/templates/@layout.latte
@@ -1,5 +1,5 @@
 {define svg $icon, $class}
-	<svg n:class='icon, "icon-$icon", isset($class) ? $class'><use xlink:href="http://localhost/vzsjablonec/account/img/symbols.svg#icon-{$icon}"></use></svg>
+	<svg n:class='icon, "icon-$icon", isset($class) ? $class'><use xlink:href="{$baseUrl}/img/symbols.svg#icon-{$icon}"></use></svg>
 {/define}
 
 <!DOCTYPE html>
@@ -8,11 +8,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="content-language" content="cs">
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
-	<link rel="shortcut icon" href="{$baseUrl}/img/favicon.ico" type="image/x-icon">
-	<link rel="icon" sizes="any" href="{$baseUrl}/img/favicon.svg" type="image/svg+xml">
+	<link rel="shortcut icon" href="{$baseUrl}/img/member.ico" type="image/x-icon">
+	<link rel="icon" sizes="any" href="{$baseUrl}/img/member.svg" type="image/svg+xml">
 	<title>Přihlášení | VZS Jablonec</title>
 	<link rel="stylesheet" href="{$baseUrl}/css/account.css" type="text/css">
-	<link rel="stylesheet" href="{$baseUrl}/css/account-symbols.css" type="text/css">
+	<link rel="stylesheet" href="{$baseUrl}/css/symbols.css" type="text/css">
 	<script src="{$baseUrl}/js/netteForms.js" type="text/javascript"></script>
 	{block #head}{/block}
 </head>
