--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -2,7 +2,7 @@
  * @package    MyApplication
  *
  * @param string   $robots   tell robots how to index the content of a page (optional)
- * @param string   $basePath web base path
+ * @param string   $baseUrl web base path
  * @param array    $flashes  flash messages
  * @param Nette\Web\User $user  current user
  *}
@@ -19,12 +19,12 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
-	<link rel="shortcut icon" href="{$baseUrl}/img/favicon.ico" type="image/x-icon">
-	<link rel="icon" sizes="any" href="{$baseUrl}/img/favicon.svg" type="image/svg+xml">
+	<link rel="shortcut icon" href="{$baseUrl}/img/member.ico" type="image/x-icon">
+	<link rel="icon" sizes="any" href="{$baseUrl}/img/member.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="{$baseUrl}/css/member.css" type="text/css">
-	<link rel="stylesheet" href	="{$baseUrl}/css/member.mobile.css" type="text/css" media="screen and (max-width: 900px)">
+	<link rel="stylesheet" href="{$baseUrl}/css/member.mobile.css" type="text/css" media="screen and (max-width: 900px)">
 	<link rel="stylesheet" href="{$baseUrl}/css/member.mobile.css" type="text/css" media="screen and (orientation: portrait)">
-	<link rel="stylesheet" href="{$baseUrl}/css/member-symbols.css">
+	<link rel="stylesheet" href="{$baseUrl}/css/symbols.css">
 
 	<script src="{$baseUrl}/js/jquery.min.js" type="text/javascript"></script>
 	<script src="{$baseUrl}/js/netteForms.js" type="text/javascript"></script>
