Global replace $basePath -> $baseUrl

--- a/app/AccountModule/templates/Register.default.latte
+++ b/app/AccountModule/templates/Register.default.latte
@@ -5,8 +5,8 @@
 	legend { font-weight: bold; margin-bottom: 1ex;}
 	#main { max-width: 40em};
 </style>
-<script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
-<script type="text/javascript" src="{$basePath}/js/jquery.ui.datepicker-cs.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery-ui.custom.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.ui.datepicker-cs.js"></script>
 <script type="text/javascript" src="https://www.google.com/recaptcha/api.js" n:nonce></script>
 
 <script type="text/javascript" n:nonce>
