--- a/app/MemberModule/templates/Ankety.view.latte
+++ b/app/MemberModule/templates/Ankety.view.latte
@@ -1,5 +1,5 @@
 {block #head}
-<link rel="stylesheet" href="{$basePath}/css/anketa.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/anketa.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
 	h2 { margin-top: 1ex;}
@@ -9,8 +9,8 @@
 	ol#members { margin-bottom: 1em;}
 </style>
 <script type="text/javascript" src="{$baseUrl}/js/jquery.nette.js"></script>
-<script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
-<script type="text/javascript" src="{$basePath}/js/copy.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/confirm.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/copy.js"></script>
 {/block}
 
 <h1 n:block="title">Anketa</h1>
