--- a/app/MemberModule/templates/Hlasovani.view.latte
+++ b/app/MemberModule/templates/Hlasovani.view.latte
@@ -14,8 +14,8 @@
 	.bar { min-width: 20em;}
 	h2 { margin-top: 1ex;}
 </style>
-<script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
-<script type="text/javascript" src="{$basePath}/js/copy.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/confirm.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/copy.js"></script>
 {/block}
 
 <h1 n:block="title">Hlasování představenstva</h1>
