--- a/app/MemberModule/templates/Mail.default.latte
+++ b/app/MemberModule/templates/Mail.default.latte
@@ -10,7 +10,7 @@
 	article:target .member:before, .member:hover:before { display: none}
 </style>
 
-<script type="text/javascript" src="{$basePath}/js/copy.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/copy.js"></script>
 {/block}
 
 <h1 n:block="title">Zprávy</h1>
