--- a/app/MemberModule/templates/Ankety.edit.latte
+++ b/app/MemberModule/templates/Ankety.edit.latte
@@ -1,7 +1,7 @@
 {block #head}
-<link rel="stylesheet" href="{$basePath}/texyla/css/style.css" type="text/css">
-<link rel="stylesheet" href="{$basePath}/texyla/css/theme.css" type="text/css">
-<link rel="stylesheet" href="{$basePath}/css/jquery-ui.custom.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/texyla/css/style.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/texyla/css/theme.css" type="text/css">
+<link rel="stylesheet" href="{$baseUrl}/css/jquery-ui.custom.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
 input.buttonLike { border: none; cursor: pointer; font-size: 1.1em; font-family: inherit;}
@@ -13,8 +13,8 @@ input.buttonLike:active { background-color: #da251c; color: white; background-im
 div.texyla div.textarea-container { clear: right;}
 </style>
 
-<script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
-<script type="text/javascript" src="{$basePath}/js/jquery.are-you-sure.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery-ui.custom.min.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>
 
 {control texylaJs}
 
@@ -25,7 +25,7 @@ div.texyla div.textarea-container { clear: right;}
 	}
 	
 	$.texyla.setDefaults({
-		baseDir: {$basePath}+'/texyla',
+		baseDir: {$baseUrl}+'/texyla',
 		previewPath: {link texyPreview, TRUE}
 		
 	});
