--- a/app/MemberModule/templates/User.default.latte
+++ b/app/MemberModule/templates/User.default.latte
@@ -18,7 +18,7 @@
 		#tabs ul li.active { background-color: white; position: relative; top: 1px; }
 		#tabs ul li.active a { color: inherit;}
 	</style>
-	<script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
+	<script type="text/javascript" src="{$baseUrl}/js/nette.ajax.js"></script>
 	<script type="text/javascript" n:nonce>
 		$(function () {
 			$.nette.init();
