--- a/app/PhotoModule/templates/Album.add.latte
+++ b/app/PhotoModule/templates/Album.add.latte
@@ -1,20 +1,20 @@
 {block #head}
-    <link rel="stylesheet" href="{$basePath}/css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="{$basePath}/css/jquery.ui.plupload.css" type="text/css">
+    <link rel="stylesheet" href="{$baseUrl}/css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="{$baseUrl}/css/jquery.ui.plupload.css" type="text/css">
 
     <style type="text/css" n:syntax="off">
         #uploader-test { margin: 0 auto; width: 100% !important;}
     </style>
 
-	<script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
+	<script type="text/javascript" src="{$baseUrl}/js/nette.ajax.js"></script>
 
-    <script type="text/javascript" src="{$basePath}/js/jquery-ui-1.10.2.min.js"></script>
-    {*<script type="text/javascript" src="{$basePath}/js/jquery-ui.min.js"></script>*}
+    <script type="text/javascript" src="{$baseUrl}/js/jquery-ui-1.10.2.min.js"></script>
+    {*<script type="text/javascript" src="{$baseUrl}/js/jquery-ui.min.js"></script>*}
 	{*<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>*}
 
-    <script type="text/javascript" src="{$basePath}/js/plupload.full.min.js"></script>
-    <script type="text/javascript" src="{$basePath}/js/plupload.cs.js"></script>
-    <script type="text/javascript" src="{$basePath}/js/jquery.ui.plupload.min.js"></script>
+    <script type="text/javascript" src="{$baseUrl}/js/plupload.full.min.js"></script>
+    <script type="text/javascript" src="{$baseUrl}/js/plupload.cs.js"></script>
+    <script type="text/javascript" src="{$baseUrl}/js/jquery.ui.plupload.min.js"></script>
 {/block}
 
 {block #content}
