--- a/app/MemberModule/templates/User.default.latte
+++ b/app/MemberModule/templates/User.default.latte
@@ -57,6 +57,7 @@
 <ul class="buttonMenu">
 	{*<li n:if="$user->isInRole('member')"><a n:href="vcfArchive" class="buttonLike">{include svg address-card-o} stáhnout vizitky</a></li>*}
 	<li n:if="$user->isInRole('board')"><a n:href="table" class="buttonLike">{include svg table} tabulka</a></li>
+	<li n:if="$user->isInRole('member')"><a n:href="map" class="buttonLike">{include svg map-marker} mapa</a></li>
 	<li n:if="$user->isInRole('board')"><a n:href="add" class="buttonLike">{include svg user-plus} nový člen</a></li>
 </ul>
 
@@ -79,4 +80,6 @@
 		</div>
 	</div>
 {/snippet}
+
 {/block}
+
